# timezone-checker

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg
tests/: fixture.json  fixture.py  test_integration.py  test_need_to_be_checked.py
timezone_checker/: __main__.py
