[metadata]
author = Pierre Sassoulas
author_email = pierre.sassoulas@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
name = timezone-checker
version = 0.0.1
url = https://github.com/Pierre-Sassoulas/timezone-checker/

[options]
packages = find:
install_requires =
    timezonefinder
zip_safe = True

[options.entry_points]
console_scripts =
    timezone-checker=timezone_checker.__main__:main
